add endpoint to get all sessions
